--- a/pages/ciudades.html
+++ b/pages/ciudades.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Irlanda para viajeros</title>
+    <title>Ciudades Irlandesas</title>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <a href="#"><img src="" alt="Logo"></a>
+        <div class="logoPortada">
+            <a href="../index.html"><img class="logo" src="../assets/img/logoIrlanda.png" alt="Logo"></a>
         </div>
-        <nav>
+        <nav class="navegacion">
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Ciudades</a></li>
-                <li><a href="quehacer.html">Que hacer</a></li>
-                <li><a href="cultura.html">Cultura</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li class="listaItem"><a class="linkNav" href="../index.html">Inicio</a></li>
+                <li class="listaItem"><a class="linkNav" href="ciudades.html">Ciudades</a></li>
+                <li class="listaItem"><a class="linkNav" href="quehacer.html">Que hacer</a></li>
+                <li class="listaItem"><a class="linkNav" href="cultura.html">Cultura</a></li>
+                <li class="listaItem"><a class="linkNav" href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
 
