--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,32 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Irlanda para viajeros</title>
+    <title>Contactanos</title>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
     <header>
         <div class="logoPortada">
-            <a href="#"><img class="logo" src="../assets/img/logo irlanda.jfif" alt="Logo"></a>
+            <a href="../index.html"><img class="logo" src="../assets/img/logoIrlanda.png" alt="Logo"></a>
         </div>
-        <nav>
+        <nav class="navegacion">
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="ciudades.html">Ciudades</a></li>
-                <li><a href="quehacer.html">Que hacer</a></li>
-                <li><a href="cultura.html">Cultura</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li class="listaItem"><a class="linkNav" href="../index.html">Inicio</a></li>
+                <li class="listaItem"><a class="linkNav" href="ciudades.html">Ciudades</a></li>
+                <li class="listaItem"><a class="linkNav" href="quehacer.html">Que hacer</a></li>
+                <li class="listaItem"><a class="linkNav" href="cultura.html">Cultura</a></li>
+                <li class="listaItem"><a class="linkNav" href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
         <section>
             <div>
                 <h1>Contactate con nosotros</h1>
                 <p>Estas por viajar a Irlanda o queres saber mas sobre este increible destino. Escribinos</p>
-            </div>
-            <img src="" alt="Imagen Cliffs of Moher">
-            <div>
-
             </div>
         </section>
     </header>
